--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "xiedairong <xiedrsz@sinosoft.com.cn>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "axios-mock-adapter": "^1.9.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.1",
     "cross-env": "^3.0.0",
@@ -24,7 +25,7 @@
     "file-saver": "^1.3.3",
     "jsonp": "^0.2.1",
     "moment": "^2.18.1",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.8.3",
     "sass-loader": "^5.0.1",
     "vconsole": "^3.1.0",
     "vue-loader": "^12.1.0",
