--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^0.9.0",
     "file-saver": "^1.3.3",
     "jsonp": "^0.2.1",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.18.1",
     "node-sass": "^4.8.3",
     "sass-loader": "^5.0.1",
